# trading-delta-hedging-IBKR-API

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pre-commit-config.yaml  pyproject.toml
src/trading/: utils.py
src/trading/api/: ibapi_class.py  main.py  stock_contracts.py
src/trading/api/contracts/: stock_contracts.py
src/trading/api/orders/: stock_orders.py
src/trading/core/api_actions/: place_orders.py  request_mkt_data.py
src/trading/core/data_models/: data_models.py
src/trading/core/exceptions/: checks.py  exceptions.py
tests/integration/: conftest.py  test_app_connection.py
tests/unit/: conftest.py  test_exceptions.py
